[package]
name = "zkfhe-sk-shares"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "SK Shares circuit parameter generation for zero-knowledge FHE proofs"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
shared = { package = "zkfhe-shared", path = "../../shared" }
pvw = { workspace = true }
num-integer = { workspace = true }
bigint-poly = { workspace = true }
blake3 = { workspace = true }
fhe = { workspace = true }
fhe-math = { workspace = true }
fhe-traits = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }